--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: Denismes # add your name
-author-img:  # add your photo xxxx.jpg
+author-img:  logo-denismes.png # add your photo xxxx.jpg
 about-author:  # add description I am a web developer focusing on front-end development. Always hungry to keep learning.
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
@@ -19,7 +19,7 @@ social-linkedin: # add your Linkedin handle
 social-email: # add your Email address
 
 # Disqus
-discus-identifier: mr-brown # add your discus identifier
+discus-identifier: denismes # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
